<resources>
    <string name="app_name">Higher Or Lower</string>
    <string name="can_you_guess_it">Can you guess it ?</string>
    <string name="higher_or_lower">Higher Or Lower</string>
    <string name="guess">Guess</string>
    <string name="i_am_thinking_of_a_number_between_1_and_20">I am thinking of a number between 1 and 20.</string>
    <string name="enter_the_number_here">Enter the number here</string>
    <string name="string_todo" />
    <string name="todo">TODO</string>
</resources>