<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="74dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="serif"
        android:text="@string/i_am_thinking_of_a_number_between_1_and_20"
        android:textColor="#FAF7F7"
        android:textColorHighlight="#ED0606"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/guessEnterNumber"
        android:layout_width="376dp"
        android:layout_height="57dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:background="#F8F4F4"
        android:ems="10"
        android:hint="@string/enter_the_number_here"
        android:inputType="number"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.776" />

    <Button
        android:id="@+id/guess"
        android:layout_width="119dp"
        android:layout_height="64dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:background="#F5F6F6"
        android:onClick="guess"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_you_guess_it"
        android:textColor="#FAF7F7"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="448dp"
        android:layout_height="210dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hol_background"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>